fixed text line spacing - ticket 105

--- a/wp-content/themes/travelify/custom.css
+++ b/wp-content/themes/travelify/custom.css
@@ -1798,6 +1798,9 @@ ul#menu-header-bottom .default-menu {
     }
 }
 @media only screen and (min-width: 320px) and (max-width: 500px){
+    .home .text-top{
+        line-height: 26px;
+    }
     ul#menu-header-upper.menu li#menu-item-493, ul#menu-header-upper.menu li#menu-item-541, ul#menu-header-upper.menu li#menu-item-531{
         display: none;
     }
@@ -2102,6 +2105,9 @@ ul#menu-header-bottom .default-menu {
 * RESPONSIVE 501 - 766
 */
 @media only screen and (min-width: 501px) and (max-width: 767px){
+    .home .text-top{
+        line-height: 30px;
+    }
     ul#menu-header-upper.menu li#menu-item-493, ul#menu-header-upper.menu li#menu-item-541, ul#menu-header-upper.menu li#menu-item-531{
         display: none;
     }
@@ -2289,11 +2295,13 @@ ul#menu-header-bottom .default-menu {
     }
 }
 
-/*
-* RESPONSIVE > 767PX < 992PX
-*/
+/*******************************************************************
+*                   RESPONSIVE > 767PX < 992PX
+********************************************************************/
 @media only screen and (min-width: 768px) and (max-width: 991px){
-
+    .home .text-top{
+        line-height: 30px;
+    }
     #text-10, .resp-yes.flexslider{
         display: none;
     }
@@ -2565,6 +2573,9 @@ ul#menu-header-bottom .default-menu {
     }
     .resp-no{
         display: block;
+    }
+    .home .text-top{
+        line-height: 33px;
     }
 }
 
